src/objects/Attendees__c.object
<CustomObject>
    <fields>
        <fullName>Contact_No__c</fullName>
        <description>Mobile number of the attendee.</description>
        <label>Contact No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Email of the attendee where he/she can get the tickets.</description>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Festival__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Name of the festival, the attendee bought the tickets for.</description>
        <label>Festival</label>
        <referenceTo>Festival__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_purchased_Tickets__c</fullName>
        <description>Total number of the tickets purchased.</description>
        <label>Number of purchased Tickets</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <description>Date when the attendee purchase the Tickets</description>
        <label>Purchase Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Source__c</fullName>
        <label>Purchase Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bookmyshow</fullName>
                </value>
                <value>
                    <fullName>Official Website</fullName>
                </value>
                <value>
                    <fullName>Social Site</fullName>
                </value>
                <value>
                    <fullName>Third Party Ticket Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ticket_Type__c</fullName>
        <description>Type of Purchased tickets.</description>
        <label>Ticket Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>The Persons who want to attend the Festival.</description>
    <label>Attendees</label>
    <nameField>
        <label>Attendees Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>